# c-mrcz

./: .gitignore  .travis.yml  CMakeLists.txt  README.rst  appveyor.yml  circle.yml
src/: mrcz.c  mrcz.h  mrcz_config.h  mrcz_config.h.in
src/win32/: getopt.h
test/: TESTS.txt  test_mrcz.py
